--- a/client/package.json
+++ b/client/package.json
@@ -27,7 +27,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:5000",
+   "proxy": ["http://localhost:5000","process.env.PORT"],
   "eslintConfig": {
     "extends": [
       "react-app",
